Fixed bug causing nav items to wrap

--- a/components/Navbar/styles.module.scss
+++ b/components/Navbar/styles.module.scss
@@ -9,7 +9,7 @@
 	// targetting all elements in .listContainer
 	& > * {
 		padding-inline: 1rem;
-		// flex-shrink: 0;
+		min-width: 127px;
 	}
 
 	
